# llvm_custom_passes

./: CMakeLists.txt  README.md
src/: LoopFuse.cpp  LoopFuse.hpp  Passes.cpp
tests/: base_10_digits.ll  const_trip_count.c  input.ll  loop_fusion_combine_int_arrays.c  loop_fusion_inner_int_math.c  loop_fusion_int_diff_data.c  loop_fusion_int_float_same.c  loop_fusion_int_math.c  loop_fusion_int_mult.c  loop_fusion_int_same_data.c  loop_fusion_negative_dependancy_arrays.c  loop_fusion_negative_dependancy_math.c
